--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
     }
   },
   "require": {
-    "hamboldt/php-doc-reader": ">=v1.*",
-    "zendframework/zend-db": ">=2.*",
-    "easyframework/collections": ">=v4.*",
+    "hamboldt/php-doc-reader": "v1.*",
+    "zendframework/zend-db": "2.*",
+    "easyframework/collections": "v4.*",
     "zendframework/zend-eventmanager": "3.*"
   }
 }
