--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "authors": [
     {
       "name": "Lucas A. de Araújo",
-      "email": "lucas@minervasistemas.com.br"
+      "email": "lucasdearaujo88@gmail.com"
     }
   ],
   "autoload":{
@@ -20,9 +20,9 @@
     }
   },
   "require": {
-    "hamboldt/php-doc-reader": "v1.0.1",
-    "zendframework/zend-db": "2.7.0",
-    "easyframework/collections": "v4.1.8",
-    "zendframework/zend-eventmanager": "3.0.1"
+    "hamboldt/php-doc-reader": "v1.0.0",
+    "zendframework/zend-db": ">=2.5.1",
+    "easyframework/collections": ">=v4.0.0",
+    "zendframework/zend-eventmanager": ">=2.5.2"
   }
 }
