--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   "require": {
     "hamboldt/php-doc-reader": ">=v1.0.0",
     "zendframework/zend-db": ">=2.5.1",
-    "easyframework/collections": ">=v4.0.0",
+    "easyframework/collections": "7.0.0",
     "zendframework/zend-eventmanager": ">=2.5.2"
   }
 }
